style.css
* {
  box-sizing: border-box;
}
body {
  font-family: Verdana, Arial;
  margin: 0px;
  background-image: url("images/nativebush.jpg");
  background-position: center center;
  background-size: cover 100%;
}
#banner {
  min-height: 3rem;
  border: 2px solid black;  
}
#bannercontainer {
  padding: 15px 15px;
}
.button {
  font-size: 1rem;
  background-color: green;
}
.namecontainer {
  color: black;
  display: inline-block;
  border: 3px solid black;
  font-size: 2.5rem;
  padding: 3px 25px;
  margin-bottom: 5px;
}
.card.shrunk {
  transform: scale(0.4);
  transform-origin: top left;
}
#bigcardcontainer {
  position: fixed;
  top: 50%;
  left: 50%;
  margin-top: -24rem;
  margin-left: -16rem;
  transition: transform 0.8s;
  transform: scale(1);
}
#bigcardcontainer.notdisplayed {
  transform: scale(0) rotate(360deg);
}
.card {
  text-align: center;
  width: 32rem;
  border: 3px solid black;
  box-sizing: border-box;
  padding: 5px;
}
.theme1 .card,
.theme1 #banner {
  background-color: #b79341;
}
.theme1 .namecontainer,
.theme1 .statuscontainer,
.theme1 .infocontainer div {
  background-color: #61892f;
}
.theme2 .card,
.theme2 #banner {
  background-color: silver; 
}
.theme2 .namecontainer,
.theme2 .statuscontainer,
.theme2 .infocontainer div {
  background-color: #3c98959c;
}
.wrapper.shrunk {
  float: left;
  width: 12.8rem; /* 0.4 x 32rem */
  height: 17rem;
  margin: 10px;
}
.metercontainer {
  border: 4px solid black;
  width: 100%;
  display: inline-block;
}
.meter {
  height: 3rem;
}
.meter.level1 {
  width: 12.5%;
  background-color: #689966;
}
.meter.level2 {
  width: 25%;
  background-color: #669833;
}
.meter.level3 {
  width: 37.5%;
  background-color: #9bca68;
}
.meter.level4 {
  width: 50%;
  background-color: #fdcd30;
}
.meter.level5 {
  width: 62.5%;
  background-color: #ff9802;
}
.meter.level6 {
  width: 75%;
  background-color: #9a0004;
}
.meter.level7 {
  width: 87.5%;
  background-color: #670133;
}
.meter.level8 {
  width: 100%;
  background-color: #320131;
}
.statuscontainer {
  color: black;
  font-size: 1.25rem;
  margin-bottom: 5px;
  border: 2px solid black;
  display: inline-block;
  padding: 3px 25px;
}
.image {
  width: 100%;
  border: 4px solid black;
}
.infocontainer {
  border-spacing: 2px;
}
.infocontainer div {
  display: table-cell;
  border: 3px solid black;
  vertical-align: top;
  text-align: left;
  padding: 1px 10px;
  font-size: 1rem;
}
.infocontainer ul {
  padding-left: 18px;
  margin: 8px 0px;
}
.threats {
  width: 30%;
}
.facts {
  width: 70%;
}
.infoheading {
  font-size: 1.5rem;
  text-align: center;
  margin: 8px 0px;
}


/*
 * Respond to smaller screens by reducing font size, endangered meter height and making
 * width relative to the viewport
 */
@media only screen and (max-width: 600px) {
  /* Fonts scaled to 0.7 of normal */
  .namecontainer {
    font-size: 1.75rem;
  }
  .statuscontainer {
    font-size: 0.875rem; 
  }
  .infoheading {
    font-size: 1.05rem;
  }
  .infocontainer div {
    font-size: 0.7rem;
  }
  .card {
    width: 100vw;
  }
  .meter {
    height: 2.1rem;
  }
  #bigcardcontainer {
    margin-top: 0;
    margin-left: 0;
    top: 0;
    left: 0;
  }
}

